# qwen3-tts-native

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: sign-ghcr-image.yml
benchmarks/: README.md
benchmarks/corpora/: qwen3-tts-voice-design-exploratory.jsonl  qwen3-tts-voice-design.jsonl
benchmarks/evidence/: README.md
benchmarks/results/: bf16-argmax-vocab2048.json  bf16-argmax-vocab3072.json  bf16-gemv-predictor-1024x1024.json  bf16-gemv-predictor-1024x3072.json  bf16-gemv-predictor-1024x512.json  bf16-gemv-predictor-3072x1024.json  bf16-gemv-predictor-lm-head-1024x2048.json  bf16-gemv-talker-2048x1024.json  bf16-gemv-talker-2048x2048.json  bf16-gemv-talker-2048x6144.json  bf16-gemv-talker-6144x2048.json  codec-incremental-fixture-benchmark.json  codec-incremental-fixture-parity.json  cuda-device-probe.json  device-handoff-runtime-smoke-manifest.json  device-handoff-runtime-smoke.json  device-handoff-v1-pcm-parity.json  device-handoff-v1-pcm-parity.sha256  model-contract-validation.json  native-artifact-load-indexed-contracts.json  native-artifact-load-indexed-contracts.time.txt  native-artifact-load-indexed-f32-test.json  native-artifact-load-indexed-f32-test.time.txt  native-artifact-load-indexed-full.json  native-artifact-load-indexed-full.time.txt  native-artifact-loader-summary.json  native-artifact-pack-indexed-bf16-repeat.json  native-artifact-pack-indexed-bf16-repeat.time.txt  native-artifact-pack-indexed-bf16.json  native-artifact-pack-indexed-bf16.time.txt  native-artifact-pack-indexed-f32-test.json  native-artifact-pack-indexed-f32-test.time.txt  native-artifact-upload-indexed-decoder-memcheck.json  native-artifact-upload-indexed-decoder.json  native-artifact-upload-indexed-decoder.time.txt  native-artifact-upload-indexed-f32-test.json  native-artifact-upload-indexed-f32-test.time.txt  native-codec-decoder-bf16.json  native-http-finish-reason-real-smoke.json  native-http-server-real-smoke.json  (+14 more)
benchmarks/tools/: README.md  capture-spark-telemetry.sh  reduce-spark-run.sh  run-qualifying-benchmark.sh
containers/: Dockerfile.builder  Dockerfile.runtime  Dockerfile.runtime.dockerignore  README.md  RELEASE_CHECKLIST.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  OPERATIONS.md  QUICKSTART.md  README.md  openapi.yaml
licenses/: Bitstream-Vera-LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md
licenses/application/: README.md
licenses/model/: MODEL_CARD.md  SOURCE.json
native/qwen3-tts-bench/: Cargo.toml  README.md
native/qwen3-tts-bench/src/: ffi.rs  main.rs  report.rs  wav.rs
native/qwen3-tts-http-bench/: Cargo.toml  README.md
native/qwen3-tts-http-bench/examples/: workload.jsonl
native/qwen3-tts-http-bench/src/: error.rs  http.rs  lib.rs  main.rs  model.rs  multipart.rs  phase_events.rs  report.rs  runner.rs  url.rs  wav.rs
native/qwen3-tts-http-bench/tests/: http_fixtures.rs
native/qwen3-tts-native/: Cargo.toml  README.md
native/qwen3-tts-native-codec/: .gitignore  Cargo.toml  README.md
native/qwen3-tts-native-codec/native/: CMakeLists.txt
native/qwen3-tts-native-codec/native/include/: qwen3_tts_codec.h
native/qwen3-tts-native-codec/native/src/: codec_state.cu
native/qwen3-tts-native-codec/native/tests/: abi_v2_contract.cpp
native/qwen3-tts-native/native/: CMakeLists.txt
native/qwen3-tts-native/native/include/: qwen3_tts_native.h
native/qwen3-tts-native/native/src/: gemv.cu  int8_gemv.cu  primitive_parity.cu  runtime.cu  sampling_kernels.cu  talker.cu  talker_internal.cuh  talker_kernels.cu  weights.cu
native/qwen3-tts-native/src/: artifact.rs  config.rs  contract.rs  cuda.rs  device_weights.rs  lib.rs  loader.rs  main.rs  native_talker.rs  prompt.rs  session_bench.rs  sha256.rs  talker_cli.rs  tokenizer.rs  weights.rs
native/qwen3-tts-native/tests/: model_contract.rs
native/qwen3-tts-runtime/: Cargo.toml  README.md
native/qwen3-tts-runtime/include/: qwen3_tts_runtime.h
native/qwen3-tts-runtime/src/: cuda_packet_stager.rs  ffi.rs  ffi_support.rs  lib.rs  native_backend.rs  request.rs  scheduler.rs  types.rs
native/qwen3-tts-runtime/tests/: c_abi_benchmark.c  c_abi_endurance.c  c_abi_smoke.c  runtime_contract.rs
native/qwen3-tts-server/: Cargo.toml  README.md
native/qwen3-tts-server/src/: api.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  metrics.rs  multipart.rs  server.rs  wav.rs
native/qwen3-tts-server/tests/: http_contract.rs
notes/: architecture.md  codec-incremental-design.md  model-contract.md  native-artifact-loader.md  toolchain.md
reports/: README.md  evidence.schema.json  generate_report.py
reports/output/: README.md
reports/tests/: test_generate_report.py
reports/tools/: README.md  assemble_production_manifest.py  finalize_production_evidence.py  prepare_production_metadata.py  production-declarations.example.json
research/paper/: Makefile  README.md  main.tex  references.bib
tools/: generate_decoder_reference.py  verify-repository.sh
tools/release-image/: README.md  bootstrap-tools.sh  build-and-push.sh  clean-pull-gpu-acceptance.sh  lib.sh  max-provenance.jq  normalize-provenance.jq  promote.sh  test-release-tools.sh  versions.env  (+2 more)
(+113 files in other folders)
