[package]
name = "qwen3-tts-bench"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Qualification harness for the native Qwen3-TTS runtime ABI"

[dependencies]
anyhow = "1.0.103"
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "deny"
