[package]
name = "qwen3-tts-native"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.103"
fancy-regex = "0.16.2"
libloading = "0.9.0"
memmap2 = "0.9.11"
safetensors = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
unicode-normalization = "0.1.25"
