[package]
name = "qwen3-tts-server"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
axum = { version = "0.8", features = ["http1", "http2", "json", "tokio"] }
bytes = "1.10"
futures-core = "0.3"
qwen3-tts-runtime = { path = "../qwen3-tts-runtime" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
